--- a/web.config
+++ b/web.config
@@ -9,7 +9,7 @@
     </handlers>
     <rewrite>
       <rules>
-        <rule name="myapp">
+        <rule name="iisnode">
           <match url="/*" />
           <action type="Rewrite" url="server.js" />
         </rule>
