--- a/web.config
+++ b/web.config
@@ -5,7 +5,7 @@
     to be handled by the iisnode module -->
 
     <handlers>
-      <add name="iisnode" path="hello.js" verb="*" modules="iisnode" />
+      <add name="iisnode" path="server.js" verb="*" modules="iisnode" />
     </handlers>
 
     <!-- 
